tests/analyzer/fail/union-empty.api
// expected: 6001

type bad = union {};